# nesfinch

./: .gitignore  Cargo.toml  build.rs
client/: package.json
client/renderer/scripts/: app.js  auth.js  friends.js  loading.js  relationships.js  router.js
client/renderer/styles/: auth.css  friends-page.css  index.css  requests-page.css  root.css
client/renderer/views/: index.html  loading.html
client/renderer/views/auth/: login.html  register.html
client/renderer/views/pages/: friends-page.html  requests-page.html  subscriptions-page.html
client/src/: clientgRPC.js  crypto-utils.js  main.js  preload.js  store.js
proto/: rpc_relationships.proto  rpc_search.proto  rpc_signin_user.proto  rpc_signup_user.proto  service.proto  service_chat.proto  service_communication.proto  service_status.proto  user.proto
server/: main.rs
server/services/: auth_service.rs  chat_service.rs  key_manager.rs  mod.rs  relationships_service.rs  seacrh_service.rs  statusUser_service.rs  status_user_service.rs
