[package]
name = "voicechat_pgp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "voicechat-server"
path = "server/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
bcrypt = "0.14"
sha2 = "0.10"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.10"
dotenv = "0.15"

