[package]
name = "voicechat_pgp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "voicechat-server"
path = "server/main.rs"

[dependencies]
tokio = { version = "1.44.2", features = ["full", "sync", "rt"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "migrate", "uuid"] }
bcrypt = "0.14"
sha2 = "0.10"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dotenvy = "0.15"
rsa = { version = "0.9", features = ["pem", "std"] }
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["serde"] }
base64 = "0.21"
pem = "3.0"
constant_time_eq = "0.3"
ring = "0.17"
hex = "0.4.3"
aes-gcm = "0.10.3"
uuid = "1.16.0"
tracing = "0.1.41"
futures-core = "0.3.31"
futures-util = "0.3.31"

[build-dependencies]
tonic-build = "0.10"
dotenv = "0.15"



